<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="androidx.databinding.ObservableField" />

        <variable
            name="frag"
            type="com.example.medic_app.fmt.MonitorInfoFragment" />

        <variable
            name="btnText"
            type="ObservableField&lt;String&gt;" />

        <variable
            name="power"
            type="ObservableField&lt;String&gt;" />

        <variable
            name="id"
            type="ObservableField&lt;String&gt;" />

        <variable
            name="key"
            type="ObservableField&lt;String&gt;" />

        <variable
            name="softVer"
            type="ObservableField&lt;String&gt;" />

        <variable
            name="hardVer"
            type="ObservableField&lt;String&gt;" />
        <variable
            name="firmVer"
            type="ObservableField&lt;String&gt;" />

        <variable
            name="isLogin"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="isBind"
            type="androidx.databinding.ObservableInt" />

        <variable
            name="recyclerAdapter"
            type="androidx.recyclerview.widget.RecyclerView.Adapter"/>
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/radioG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/way_of_connecting_device"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioB0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textSize="12sp"
                    android:text="@string/directly_connection" />

                <RadioButton
                    android:id="@+id/radioB1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/select_a_device_to_connect_from_the_scan_list" />
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:onClick="@{frag::clickConnect}"
                android:text="@{btnText}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/device_power_level, power)}"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/device_id, id)}"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/device_key, key)}"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/device_software_ver, softVer)}"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/device_hardware_ver, hardVer)}"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/device_firmware_ver, firmVer)}"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:visibility="@{isLogin ? View.VISIBLE : View.GONE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="已 绑定/关注 的设备列表" />

                <com.example.medic_app.widget.CustomRecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="LinearLayoutManager"
                    app:recyclerAdapter="@{recyclerAdapter}" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{frag::clickBindDev}"
                android:text='@{isBind == 0 ? "Click bind device":(isBind == 1 ?  "Click unbind device":"Click unfollow device")}'
                android:textAllCaps="false"
                android:visibility="@{isLogin ? View.VISIBLE : View.GONE}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{frag::clickGetFamilyMember}"
                android:text="获取家庭成员列表"
                android:textAllCaps="false"
                android:visibility="@{isLogin ? View.VISIBLE:View.GONE}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{frag::clickShowDownloadData}"
                android:text="从服务器获取已上传的测量数据"
                android:textAllCaps="false"
                android:visibility="@{isBind > 0? View.VISIBLE : View.GONE}" />



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
